--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 
-<body style="backgroundcolor:#fff">
+<body style="background-color:#fff">
   <!-- 放一个容器 -->
   <div id="app"></div>
 </body>
